Bug 7896 - du -c gets totals wrong
Summary: du -c gets totals wrong
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 3.0-CURRENT
Hardware: Any Any
: Normal Affects Only Me
Assignee: Dag-Erling Smørgrav
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 1998-09-11 15:10 UTC by Zach Heilig
Modified: 1998-09-11 16:56 UTC (History)
0 users

See Also:


Attachments
file.diff (409 bytes, patch)
1998-09-11 15:10 UTC, Zach Heilig
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Zach Heilig 1998-09-11 15:10:01 UTC
du -c simply puts out the numbers in the last directory visited.

Fix: Both -stable and -current need this fix:
How-To-Repeat: 
[before fix:]
$ cd /usr/src/bin
$ du -c ed ls
4       ed/CVS
10      ed/test/CVS
165     ed/test
290     ed
4       ls/CVS
60      ls
60      total
$ 
[after fix:]
$ cd /usr/src/bin
$ du -c ed ls
4       ed/CVS
10      ed/test/CVS
165     ed/test
290     ed
4       ls/CVS
60      ls
350     total
$
Comment 1 Dag-Erling Smørgrav freebsd_committer freebsd_triage 1998-09-11 16:40:28 UTC
Responsible Changed
From-To: freebsd-bugs->des

I broke it, I'll fix it. 
Comment 2 Dag-Erling Smørgrav freebsd_committer freebsd_triage 1998-09-11 16:55:02 UTC
State Changed
From-To: open->closed

Patch tested and applied to -current and -stable. Thank you for bringing 
this matter to our attention.