Print correct total for -c option (previously, the total for the last directory scanned was printed instead of the real total)

PR:		bin/7896
Submitted by:	Zach Heilig <zach@gaffaneys.com>


git-svn-id: svn+ssh://svn.freebsd.org/base/head@39076 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f